# div_vars

./: .gitignore  THIRD_PARTY_VERSIONS.md  metis-graph.mk  run.sh  test_15_TOP32_72.aig  test_15_TOP32_72_expanded.aig  visualize.sh
METIS/: .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md
METIS/libmetis/: CMakeLists.txt  compress.c  kmetis.c  kwayfm.c  struct.h  wspace.c
METIS/perf/: RESULTS.md  compare.sh  run_opt.sh
scripts/: aig_visualization_template.html  partition_aig_cutpoints.py  visualize_aig_keys.py
tests/: test_visualization_layout.py
